download button layout issue

--- a/src/components/Introduction.module.css
+++ b/src/components/Introduction.module.css
@@ -14,8 +14,8 @@
   z-index: 2;
   background: rgba(237, 240, 240, 0.96);
   border-radius: 18px;
-  padding: 4rem 4rem 4rem;
-  max-width: 1000px;
+  padding: 2.5rem 2.5rem 2.5rem;
+  max-width: 750px;
   width: 75vw;
   text-align: center;
   box-shadow:
